@@ -12796,6 +12796,9 @@ stored in a \typ{VECSMALL}.
 vecvecsmall and \kbd{y} a \typ{VECSMALL}, search \kbd{y} inside \kbd{x}.
 \kbd{flag} has the same meaning as for \kbd{setsearch}.
 
+\fun{GEN}{vecvecsmall_max}{GEN x} returns the largest entry in all $x[i]$,
+assumed non-empty.
+
 \newpage
 \chapter{Functions related to the GP interpreter}
 
