@@ -94,8 +94,9 @@ BA   31- new GP function ellbsd
      37- [libpari] int2um1 (for 2^n - 1)
      38- Fl_powu: special purpose code when base is 2
      39- [libpari] vecpowuu, vecpowug
-     41- [libpari] zerovec_block
-     40- [libpari] Z_ZV_mod_tree
+     40- [libpari] zerovec_block
+     41- [libpari] Z_ZV_mod_tree
+     42- [libpari] vecvecsmall_max
 
   Changed
       1- rewrite bnfnarrow
